# v7

./: .gitattributes  .gitignore  .pre-commit-config.yaml  API  Dockerfile  Makefile  Pyproject.toml  README.MD  brain_v7.py  docker-compose.yml  dockerfile  env.example  gunicorn.conf.py  mypy.ini  render.yaml  renderer_v7.py  requirement.txt  ruff.toml
ai_modes/: __init__.py  contractors.py  contracts.py  v5_legacy.py  v6_hybrid.py  v7_flagship.py
analytics/: __init__.py  exporters.py  metrics.py
app/: __init__.py  config.py  container.py  feature_flags.py  logging_setup.py  middleware.py
cli/: __init__.py  main.py
connectors/: __init__.py  billing.py  emailer.py  maps.py  sheets.py  web_widget.py  whatsapp.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_MODEL.md  MODES.md  OPERATIONS.md  RUNBOOKS.md  SECURITY.md
handlers/: handler_v5.py  handler_v6.py  handler_v7.py
monitoring/: __init__.py  heartbeat.py  probes.py
policies/: __init__.py  guardrails.md  style.md
retrieval/: __init__.py  catalog_store.py  faq_store.py  geo_store.py  overrides_store.py  policy_store.py  storage.py  synonyms_store.py
routes/: __init__.py  admin_routes.py  analytics_routes.py  auth_routes.py  diag_routes.py  files_routes.py  health_routes.py  webchat_routes.py  whatsapp_routes.py
schemas/: branches.schema.json  catalog.schema.json  crm.schema.json  delivery.schema.json  events.schema.json  faq.schema.json  openapi.yaml
scripts/: export_analytics_csv.py  rebuild_synonyms.py  restore_snapshot.py  rotate_logs.py  (+3 more)
sdk/python/: client.py  pyproject.toml  setup.cfg
(+63 files in other folders)
